<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!-- Cheat by adding a trailing space to make the title and spinner look like one sentence. -->
  <string name="trending_title">Trending&#160;</string>

  <string name="no_intent_handler">
    There are no applications available to handle this action.
  </string>
  <string name="error_title">Oops!</string>
  <string name="error_message">
    An error occurred loading the resource.\nPlease try again later.
  </string>
  <string name="empty_title">Weird…</string>
  <string name="empty_message">
    There doesn\'t seem to be\nanything trending in this timespan.
  </string>
  <string name="loading_message">loading</string>
  <string name="action_title_device">Devices in</string>
  <string name="action_title_event">Events in</string>
  <string name="nav_drawer_device">Devices</string>
  <string name="nav_drawer_event">Events</string>
  <string name="nav_drawer_credentials">Login</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="sign_in_title">Enter your HomeSeer Login</string>
  <string name="devices_filter_all">All</string>
  <string name="events_filter_all">All</string>
  <string name="title_activity_scrolling">ScrollingActivity</string>
  <string name="action_settings">Settings</string>
</resources>
